objects/RaycomMonthlyLineItem__c.object
<CustomObject>
    <description>This object is a temporary holder for Raycom data. A report is run monthly and sent to Marathon. Marathon uploads the report via a Salesforce import. As the records are created a Visual Flow sees them and does some manipulation to compare them against the Raycom Key (indexed) field on Spot Data records. When it finds a match it copies the Invoice Number (the Order number plus a suffix) into the Spot Data. The Flow also marks these records for deletion after 15 days in order to keep stored data size down.</description>
    <fields>
        <fullName>BillingMonth__c</fullName>
        <label>Billing Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>OrderNumber__c&amp;CASE( 
MONTH (BillingMonth__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
&quot;December&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spot_Data_Failure_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Spot Data Failure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spot_Data_Failure_Message__c</fullName>
        <label>Spot Data Failure Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X58MinutesAgo__c</fullName>
        <formula>NOW () - 58 * (1/24/60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>58 Minutes Ago</label>
        <type>DateTime</type>
    </fields>
    <label>Raycom Monthly Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{00000}</displayFormat>
        <label>Raycom Monthly Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raycom Monthly Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>